instalando express y añadiendola como dependencia

--- a/package.json
+++ b/package.json
@@ -18,5 +18,8 @@
   "homepage": "https://github.com/UlisesOrnelasR/express_basic#readme",
   "devDependencies": {
     "jest": "^27.5.1"
+  },
+  "dependencies": {
+    "express": "^4.17.3"
   }
 }
